# dinner-rush

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEMO.md  INTERVIEW_PREP.md  README.md  docker-compose.yml
customer-web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
customer-web/src/app/: globals.css  layout.tsx  page.tsx
customer-web/src/components/: add-to-bundle.tsx  bundle-card.tsx  bundle-stack.tsx  coverage-meter.tsx  dietary.tsx  dish-card.tsx  food-image.tsx  headcount-stepper.tsx  restaurant-card.tsx  section.tsx
customer-web/src/lib/: cart-context.tsx  data.ts  dr.ts  order-api.ts  types.ts  utils.ts
docs/: CONTRACT.md
infra/grafana/dashboards/: dinner-rush.json
infra/postgres/init/: 01-create-databases.sql
infra/prometheus/: prometheus.yml
libs/drcommon/: pyproject.toml
libs/drcommon/drcommon/: __init__.py  app.py  broker.py  config.py  db.py  downstream.py  http_client.py  idempotency.py  logging.py  metrics.py  models.py  outbox.py  payment.py  states.py
libs/drcommon/tests/: test_clients.py  test_downstream.py  test_resilience.py  test_states.py
scripts/: check.sh
services/courier/: Dockerfile
services/courier/app/: main.py
services/dashboard_api/: Dockerfile
services/ingestion/: Dockerfile
services/load_gen/: Dockerfile
services/orchestrator/: Dockerfile
services/payment/: Dockerfile
services/restaurant/: Dockerfile
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
(+42 files in other folders)
