[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drcommon"
version = "0.1.0"
description = "Shared infrastructure for the Dinner Rush order pipeline (config, broker, db, outbox, state machine, metrics, logging)."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "aio-pika==9.5.4",
    "asyncpg==0.30.0",
    "redis==5.2.1",
    "httpx==0.28.1",
    "prometheus-client==0.21.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
]

[tool.setuptools.packages.find]
include = ["drcommon*"]
